tests/snapshots/snapshot_integration__dot_polyline__stacked_labels.snap
---
source: tests/snapshot_integration.rs
expression: output
---
digraph {
graph [splines=polyline];
D0 [shape=box, style=rounded, label="begin"];
{rank = sink; D1 [shape=box, style=rounded, label="end"];}
D4 [shape=box, label="int x = 1;"];
D8 [shape=box, label="x++;"];
D10 [shape=diamond, label="(x < 4)?"];
D16 [shape=box, label="return x;"];
D4 -> D8;
D8 -> D10;
D10:s -> D8:n [xlabel=Y];
D10:e -> D16:n [xlabel=N];
D16 -> D1;
D0 -> D4;
}
