tests/snapshots/snapshot_integration__dot_polyline__switch_char_literal.snap
---
source: tests/snapshot_integration.rs
expression: output
---
digraph {
graph [splines=polyline];
D0 [shape=box, style=rounded, label="begin"];
{rank = sink; D1 [shape=box, style=rounded, label="end"];}
D4 [shape=box, label="int code = 'b';"];
D9 [shape=diamond, label="(code) == 'a'?"];
D10 [shape=diamond, label="(code) == 'b'?"];
D15 [shape=box, label="code = 1;"];
D17 [shape=box, label="break"];
D19 [shape=box, label="code = 2;"];
D21 [shape=box, label="break"];
D23 [shape=box, label="code = 3;"];
D25 [shape=box, label="return code;"];
D4 -> D9;
D21 -> D25;
D19 -> D21;
D23 -> D25;
D9:e -> D10:n [xlabel=N];
D17 -> D25;
D15 -> D17;
D10:s -> D19:n [xlabel=Y];
D10:e -> D23:n [xlabel=N];
D9:s -> D15:n [xlabel=Y];
D25 -> D1;
D0 -> D4;
}
