tests/snapshots/snapshot_integration__dot_polyline__switch_with_default.snap
---
source: tests/snapshot_integration.rs
expression: output
---
digraph {
graph [splines=polyline];
D0 [shape=box, style=rounded, label="begin"];
{rank = sink; D1 [shape=box, style=rounded, label="end"];}
D4 [shape=box, label="int v = 2;"];
D10 [shape=diamond, label="(v) == 1?"];
D11 [shape=diamond, label="(v) == 2?"];
D12 [shape=diamond, label="(v) == 3?"];
D17 [shape=box, label="v += 10;"];
D19 [shape=box, label="break"];
D21 [shape=box, label="v += 20;"];
D23 [shape=box, label="break"];
D25 [shape=box, label="v += 30;"];
D27 [shape=box, label="return v;"];
D4 -> D10;
D23 -> D27;
D21 -> D23;
D25 -> D27;
D11:e -> D12:n [xlabel=N];
D10:e -> D11:n [xlabel=N];
D19 -> D27;
D17 -> D19;
D12:s -> D21:n [xlabel=Y];
D11:s -> D21:n [xlabel=Y];
D12:e -> D25:n [xlabel=N];
D10:s -> D17:n [xlabel=Y];
D27 -> D1;
D0 -> D4;
}
