tests/snapshots/snapshot_integration__dot_polyline__template_function.snap
---
source: tests/snapshot_integration.rs
expression: output
---
digraph {
graph [splines=polyline];
D0 [shape=box, style=rounded, label="begin"];
{rank = sink; D1 [shape=box, style=rounded, label="end"];}
D4 [shape=diamond, label="(a > b)?"];
D9 [shape=box, label="return a;"];
D11 [shape=box, label="return b;"];
D4:e -> D11:n [xlabel=N];
D4:s -> D9:n [xlabel=Y];
D9 -> D1;
D11 -> D1;
D0 -> D4;
}
